--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
