--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.3.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
@@ -41,6 +42,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
     "popper.js": "^1.12.5",
+    "redis": "^2.8.0",
     "rxjs": "^5.4.2",
     "serve-favicon": "^2.4.5",
     "zone.js": "^0.8.14"
