--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular-async-local-storage": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
@@ -33,9 +34,11 @@
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
