--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/jwt-decode": "^2.2.1",
     "angular-async-local-storage": "^2.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
@@ -39,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.1.0",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^4.12.3",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
